<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>compression_and_decompression_statistics_saver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jozef.franciszek.wiatr@gmail.com">airlinux</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_transport</depend>
  <depend>point_cloud_interfaces</depend>
  <depend>point_cloud_transport</depend>
  <depend>point_cloud_transport_plugins</depend>
  <depend>cloudini_lib</depend>
  <depend>cloudini_ros</depend>
  <depend>zlib_point_cloud_transport</depend>
  <depend>zstd_point_cloud_transport</depend>
  <depend>draco_point_cloud_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
